# chat-aggregator

./: .gitignore  README.md  index.html  main.py  pyproject.toml  script.js  styles.css
actionable-insights-agent/: agent.py
chat_assistant/: agent.py  mock_data.json  utils.py
example_chat/: example.json
scripts/: setup_google_auth.py
webapp/: index.html  script.js  styles.css
